--- a/templates/index.html
+++ b/templates/index.html
@@ -9,29 +9,51 @@
         <th>ID</th>
         <th>Started</th>
         <th>Last Move</th>
+        <th>Complete?</th>
         <th>Players</th>
       </tr></thead>
       {% for game in games -%}
       <tr>
         <td><a href="{{ url_for('view_game', game_id=game.id_) }}">{{ game.id_ }}</a></td>
         <td>{{ game.started.strftime(config.TS_FORMAT) }}</td>
-        <td>{{ game.last_move.strftime(config.TS_FORMAT) }}</td>
+        <td>{% if game.last_move is not none %}{{ game.last_move.strftime(config.TS_FORMAT) }}{% endif %}</td>
+        <td>{{ game.complete }}</td>
         <td>{{ game.players|map(attribute='name')|join(', ') }}
       </tr>
       {%- endfor %}
     </table>
+    <a href="{{ url_for('create_game') }}">Create Game</a>
     <h1>Pending Games</h1>
     <table>
       <thead><tr>
         <th>ID</th>
+        <th>Creator</th>
         <th>Created</th>
         <th>Players</th>
       </tr></thead>
       {% for game in pending_games -%}
       <tr>
-        <td><a href="{{ url_for('view_pending_game', game_id=game.id_) }}">{{ game.id_ }}</a></td>
+        <td><a href="{{ url_for('pending_game', game_id=game.id_) }}">{{ game.id_ }}</a></td>
+        <td>{{ game.creator.name }}</td>
         <td>{{ game.created.strftime(config.TS_FORMAT) }}</td>
         <td>{{ game.players|map(attribute='name')|join(', ') }}
+      </tr>
+      {%- endfor %}
+    </table>
+    <h1>Invitations</h1>
+    <table>
+      <thead><tr>
+        <th>ID</th>
+        <th>Creator</th>
+        <th>Created</th>
+        <th>Players</th>
+      </tr></thead>
+      {% for invitation in invitations -%}
+      <tr>
+        <td><a href="{{ url_for('pending_game', game_id=invitation.game.id_) }}">{{ invitation.game.id_ }}</a></td>
+        <td>{{ invitation.game.creator.name }}</td>
+        <td>{{ invitation.game.created.strftime(config.TS_FORMAT) }}</td>
+        <td>{{ invitation.game.players|map(attribute='name')|join(', ') }}
       </tr>
       {%- endfor %}
     </table>
