--- a/telepict/templates/base.html
+++ b/telepict/templates/base.html
@@ -5,7 +5,7 @@
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>Telepict - {% block title %}{% endblock %}</title>
     <ul>
-      <li><a href="{{ url_for('index') }}">Home</a></li>
+      <li><a href="{{ url_for('game.index') }}">Home</a></li>
       <li>{%- include 'partials/user.html' %}</li>
     </ul>
     {%- endblock %}
