--- a/telepict/templates/delete_game.html
+++ b/telepict/templates/delete_game.html
@@ -2,7 +2,7 @@
 {% block title %}Delete Game: {{ game.id_ }}{% endblock %}
 
 {% block content %}
-  <form action="{{ url_for('delete_game', game_id=game.id_) }}" method='post'>
+  <form action="{{ url_for('game.delete_game', game_id=game.id_) }}" method='post'>
     <label>Really delete?</label>
     <button type="submit">Delete</button>
   </form>
