--- a/telepict/templates/base.html
+++ b/telepict/templates/base.html
@@ -2,22 +2,28 @@
 <html lang="en">
   <head>
     {% block head -%}
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.min.css') }}" />
+    <script src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}"></script>
     <title>Telepict - {% block title %}{% endblock %}</title>
-    <ul>
-      <li><a href="{{ url_for('game.index') }}">Home</a></li>
-      <li>{%- include 'partials/user.html' %}</li>
-    </ul>
+
+    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+      <div class="navbar-brand">Telephone Pictionary</div>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="{{ url_for('game.index') }}">Home</a>
+        </li>
+        {%- include 'partials/user.html' %}
+      </ul>
+    </nav>
     {%- endblock %}
   </head>
   <body>
     {% with messages = get_flashed_messages(with_categories=True) -%}
       {%- if messages -%}
-        <ul class="flashes">
         {% for category, message in messages -%}
-          <li>{{ category }}: {{ message }}</li>
+          <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
         {%- endfor %}
-        </ul>
       {%- endif -%}
     {%- endwith %}
     <div id="content">
