--- a/telepict/templates/partials/user.html
+++ b/telepict/templates/partials/user.html
@@ -1,6 +1,9 @@
 {% if 'username' in session -%}
 <li class="nav-item"><div class="navbar-text">Logged in as {{ session['username'] }}</div></li>
 <li class="nav-item">
+  <a class="nav-link" href="{{ url_for('auth.edit_account') }}">Edit Account</a>
+</li>
+<li class="nav-item">
   <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
 </li>
 {%- else -%}
