--- a/telepict/templates/index.html
+++ b/telepict/templates/index.html
@@ -2,60 +2,77 @@
 {% block title %}Index{% endblock %}
 
 {% block content -%}
+  <div class="container">
   {% if 'username' in session -%}
-    <h1>Active Games</h1>
-    <table>
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Active Games</h1>
+      </div>
+    </div>
+    <table class="table">
       <thead><tr>
-        <th>ID</th>
+        <th></th>
         <th>Started</th>
         <th>Last Move</th>
-        <th>Complete?</th>
+        <th># Rounds</th>
+        <th>Direction</th>
+        <th>Start</th>
         <th>Players</th>
       </tr></thead>
       {% for game in games -%}
-      <tr>
-        <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}">{{ game.id_ }}</a></td>
+      {% if game.complete -%}
+        {% set game_state = 'done' -%}
+      {% elif game.id_ is not in waiting_games -%}
+        {% set game_state = 'waiting' -%}
+      {% else -%}
+        {% set game_state = 'active' -%}
+      {% endif -%}
+      <tr class="{% if game_state == 'done' %}table-success{% elif game_state == 'active' %}table-warning{% else %}table-default{% endif %}">
+        <td><a href="{{ url_for('game.view_game', game_id=game.id_) }}" class="btn {% if game_state == 'done' %}btn-success{% elif game_state == 'active' %}btn-warning{% else %}btn-secondary{% endif %}">{% if game_state == 'done' %}View{% elif game_state == 'active' %}Continue{% else %}Waiting{% endif %}</a></td>
         <td>{{ game.started.strftime(config.TS_FORMAT) }}</td>
         <td>{% if game.last_move is not none %}{{ game.last_move.strftime(config.TS_FORMAT) }}{% endif %}</td>
-        <td>{{ game.complete }}</td>
+        <td>{{ game.num_rounds }}</td>
+        <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
+        <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
         <td>{{ game.players|map(attribute='display_name')|join(', ') }}
       </tr>
       {%- endfor %}
     </table>
-    <a href="{{ url_for('game.create_game') }}">Create Game</a>
-    <h1>Pending Games</h1>
-    <table>
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Pending Games</h1>
+      </div>
+      <div class="col-md-2">
+        <a class="btn btn-primary" href="{{ url_for('game.create_game') }}">Create Game</a>
+      </div>
+    <table class="table">
       <thead><tr>
-        <th>ID</th>
+        <th></th>
         <th>Creator</th>
         <th>Created</th>
+        <th># Rounds</th>
+        <th>Direction</th>
+        <th>Start</th>
         <th>Players</th>
       </tr></thead>
       {% for game in pending_games -%}
+      {% set invited = game.id_ in invited_games -%}
       <tr>
-        <td><a href="{{ url_for('game.pending_game', game_id=game.id_) }}">{{ game.id_ }}</a></td>
+        <td>
+          {%- if invited -%}
+            <form action="{{ url_for('game.respond_invitation', game_id=game.id_, reject=True) }}" method='post' class="form-inline"><button class="btn btn-secondary" type="submit" name="action" value="reject">Reject</button><button class="btn btn-primary" type="submit" name="action" value="accept">Accept</button></form>
+          {%- else -%}
+            <a href="{{ url_for('game.pending_game', game_id=game.id_) }}" class="btn btn-secondary">View</a>
+          {%- endif %}</td>
         <td>{{ game.creator.display_name }}</td>
         <td>{{ game.created.strftime(config.TS_FORMAT) }}</td>
-        <td>{{ game.players|map(attribute='display_name')|join(', ') }}
-      </tr>
-      {%- endfor %}
-    </table>
-    <h1>Invitations</h1>
-    <table>
-      <thead><tr>
-        <th>ID</th>
-        <th>Creator</th>
-        <th>Created</th>
-        <th>Players</th>
-      </tr></thead>
-      {% for invitation in invitations -%}
-      <tr>
-        <td><a href="{{ url_for('game.pending_game', game_id=invitation.game.id_) }}">{{ invitation.game.id_ }}</a></td>
-        <td>{{ invitation.game.creator.display_name }}</td>
-        <td>{{ invitation.game.created.strftime(config.TS_FORMAT) }}</td>
-        <td>{{ invitation.game.players|map(attribute='display_name')|join(', ') }}
+        <td>{{ game.num_rounds }}</td>
+        <td>{% if game.pass_left %}Left{% else %}Right{% endif %}</td>
+        <td>{% if game.write_first %}Write{% else %}Draw{% endif %}</td>
+        <td>{{ game.players|map(attribute='display_name')|join(', ') }}</td>
       </tr>
       {%- endfor %}
     </table>
   {%- endif %}
+</div>
 {%- endblock %}
