--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -2,12 +2,23 @@
 {% block title %}Create Account{% endblock %}
 
 {% block content %}
+<div class="container">
   <form action="{{ url_for('auth.create_account') }}" method='post'>
-    <label for="input-name">Name </label><input id="input-name" type="text" name="name" required />
-    <label for="input-dispname">Display Name (can be changed later )</label><input id="input-dispname" type="text" name="dispname" required />
-    <span title="At least 8 characters long">
-      <label for="input-pwd"></label>Password <input id="input-pwd" type="password" name="password" pattern=".{8,}" />
-    </span>
-    <button type="submit">Login</button>
+    <div class="form-group">
+      <label for="input-name">Name </label>
+      <input id="input-name" type="text" name="name" class="form-control" required />
+    </div>
+    <div class="form-group">
+      <label for="input-dispname">Display Name</label>
+      <input id="input-dispname" type="text" name="dispname" class="form-control" required />
+      <small class="form-text text-muted">You can change this later</small>
+    </div>
+    <div class="form-group">
+    <label for="input-pwd">Password</label>
+    <input id="input-pwd" type="password" name="password" class="form-control" pattern=".{8,}" />
+      <small class="form-text text-muted">At least 8 characters</small>
+    </div>
+    <button type="submit" class="btn btn-primary">Create Account</button>
   </form>
+</div>
 {% endblock %}
