--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -71,7 +71,7 @@
     <button type="button" onclick="passWriting()">Pass</button>
   </div>
   <div id="image-input-div" style="display: none">
-    <div id="image-canvas" style="width: {{ config['CANVAS_WIDTH'] }}px; height: {{ config['CANVAS_HEIGHT'] }}px"></div>
+    <div id="image-canvas" data-dimensions="{{ config['CANVAS_WIDTH'] }}x{{ config['CANVAS_HEIGHT'] }}"></div>
     <button type="button" onclick="passDrawing()">Pass</button>
     <br/>
     <p>Or upload a file:</p>
