--- a/telepict/templates/create_game.html
+++ b/telepict/templates/create_game.html
@@ -3,13 +3,29 @@
 
 {% block content %}
   <form action="{{ url_for('game.create_game') }}" method='post'>
-    <label for="input-numrounds">Number of Rounds </label><input id="input-numrounds" type="text" name="numrounds" pattern="\d+" required value="1" />
-    <br/>
-    <input id="pass-left" type="radio" name="direction" value="left" checked /><label for="pass-left">Pass left</label>
-    <input id="pass-right" type="radio" name="direction" value="right" /><label for="pass-right">Pass right</label>
-    <br/>
-    <input id="write-first" type="radio" name="write_first" value="1" checked /><label for="write-first">Write first</label>
-    <input id="draw-first" type="radio" name="write_first" value="0" /><label for="draw-first">Draw first</label>
-    <button type="submit">Create</button>
+    <div class="form-group">
+      <label for="input-numrounds">Number of Rounds </label>
+      <input id="input-numrounds" type="text" name="numrounds" pattern="\d+" required value="1" />
+    </div>
+
+    <div class="form-group">
+      <div class="form-check form-check-inline">
+        <input id="pass-left" class="form-check-input" type="radio" name="direction" value="left" checked /><label class="form-check-label" for="pass-left">Pass left</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input id="pass-right" class="form-check-input" type="radio" name="direction" value="right" /><label class="form-check-label" for="pass-right">Pass right</label>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="form-check form-check-inline">
+        <input id="write-first" class="form-check-input" type="radio" name="write_first" value="1" checked /><label class="form-check-label" for="write-first">Write first</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input id="draw-first" class="form-check-input" type="radio" name="write_first" value="0" /><label class="form-check-label" for="draw-first">Draw first</label>
+      </div>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Create Game</button>
   </form>
 {% endblock %}
