--- a/telepict/templates/edit_account.html
+++ b/telepict/templates/edit_account.html
@@ -3,10 +3,15 @@
 
 {% block content %}
   <form action="{{ url_for('auth.edit_account') }}" method='post'>
-    <label for="input-dispname">Change Display Name</label><input id="input-dispname" type="text" name="dispname" value="{{ player.display_name }}" required />
-    <span title="At least 8 characters long">
-      <label for="input-pwd"></label>Change Password <input id="input-pwd" type="password" name="password" pattern="(?:.{8,})?" />
-    </span>
-    <button type="submit">Update Account</button>
+    <div class="form-group">
+      <label for="input-dispname">Change Display Name</label>
+      <input id="input-dispname" type="text" name="dispname" class="form-control" required />
+    </div>
+    <div class="form-group">
+    <label for="input-pwd">Change Password</label>
+    <input id="input-pwd" type="password" name="password" class="form-control" pattern=".{8,}" />
+      <small class="form-text text-muted">At least 8 characters</small>
+    </div>
+    <button type="submit" class="btn btn-primary">Update Account</button>
   </form>
 {% endblock %}
